<resources>
    <string name="app_name">Movie Collection</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="no_movies">No Movies Exist!</string>

    <string name="menuitem_add_movie">Add Movie</string>
    <string name="menuitem_edit_movie">Edit Movie</string>
    <string name="menuitem_delete_movie">Delete Movie</string>

    <string name="button_add_movie">Add Movie</string>
    <string name="button_save_movie">Save Movie</string>


    <string name="label_title">Title: </string>
    <string name="label_year">Year: </string>
    <string name="label_director">Director: </string>
    <string name="label_rating">Rating: </string>
    <string name="label_views">Views: </string>
    <string name="label_notes">Notes: </string>

    <string name="hint_title">Title</string>
    <string name="hint_year">Year</string>
    <string name="hint_director">Director</string>
    <string name="hint_rating">Rating</string>
    <string name="hint_views">Views</string>
    <string name="hint_notes">Notes</string>

    <string name="confirmTitle">Are You Sure?</string>
    <string name="confirmMessage">This will permanently delete the movie</string>
    <string name="errorButton">OK</string>
    <string name="errorTitle">Movie Title is Required</string>
    <string name="errorMessage">You must enter a movie title</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>

</resources>
